= 4.7.70 - TBD =
Fix: Aditional CSS classes for gutenberg blocks ( [#1146](https://github.com/WPChill/download-monitor/issues/1146) )

= 4.7.60 - 05.12.2022 =
Fix: No access logs as redirect ( [#1143](https://github.com/WPChill/download-monitor/issues/1143) )
Added: Action hook for extensions to hook on Reports page ( [#1140](https://github.com/WPChill/download-monitor/issues/1140) )
Added: Order top downloads by title ( [#1138](https://github.com/WPChill/download-monitor/issues/1138) )
Fix: No access logging still present ( [#1139](https://github.com/WPChill/download-monitor/issues/1139) )

= 4.7.54 - 30.11.2022 =
Fix: Incompatibility with WPML for translated downloads ( [#1144](https://github.com/WPChill/download-monitor/issues/1144) )

= 4.7.53 - 25.11.2022 =
Fix: Readlink error ( [#1142](https://github.com/WPChill/download-monitor/issues/1142) )

= 4.7.52 - 23.11.2022 =
Fix: Security fix

= 4.7.51 - 22.11.2022 =
Fix: Bug on reports when Download deleted ( [#1136](https://github.com/WPChill/download-monitor/issues/1136) )

= 4.7.5 - 22.11.2022 =
Fix: Installed extensions error - missing class

= 4.7.4 - 21.11.2022 =
Fix: Sorting by download count did not take into consideration the post meta ( [#1126](https://github.com/WPChill/download-monitor/issues/1126) )
Fix: Reports Downloads CPT retrieval ( [#1128](https://github.com/WPChill/download-monitor/issues/1128) )
Fix: Storing IP setting not working ( [#1124](https://github.com/WPChill/download-monitor/issues/1124) )
Fix: Visual indicator for buttons and non-content headers ( [#1119](https://github.com/WPChill/download-monitor/issues/1119) )
Changed: Reports display dates are now based on the Date Format and Time Format settings ( [#516](https://github.com/WPChill/download-monitor/issues/516) )
Added: Option to set category in the Downloads list widget ( [#659](https://github.com/WPChill/download-monitor/issues/659) )