@@ -15,7 +15,6 @@ class Manager {
 		// add gateways
 		$this->gateways = apply_filters( 'dlm_shop_payment_gateways', array(
 			new PayPal\PayPalGateway(),
-			new Test\TestGateway()
 		) );
 
 	}
